# CrewAI_Agents

./: README.md
AI_Coding_Agent/: README.md  ai_coding_agent.py  game_outcome.json  prompt.txt  pyproject.toml  requirements.txt  rock_paper_scissors_game.py
Aricle_Generator/: README.md  article_generator.py  main.py  pyproject.toml  requirements.txt
Content_Agent/: README.md  main.py  pyproject.toml  requirements.txt
Finance_Analysis_Agent/: README.md  main.py  pyproject.toml  requirements.txt
SpreadsheetCSV/: README.md  agents.py  crew.py  main.py  pyproject.toml  requirements.txt  tasks.py  tools.py
blog_generation/: README.md  pyproject.toml
blog_generation/src/blog_generation/: crew.py  main.py
blog_generation/src/blog_generation/config/: agents.yaml  tasks.yaml
code_blog_writing/: README.md  pyproject.toml  requirements.txt
marketing_crew/: README.md  pyproject.toml
marketing_crew/src/marketing_crew/: crew.py  main.py
marketing_crew/src/marketing_crew/config/: agents.yaml  tasks.yaml
